Fix fuzzy search to use JSON_TEXTCONTAINS and improve credential handling
- FuzzySearchService: Switch from CONTAINS() to JSON_TEXTCONTAINS() for
  compatibility with Oracle AJD JSON Search Index (not CTXSYS.CONTEXT)
- HybridSearchCommand: Fix credential parsing to prioritize explicit -u/-p
  options over embedded URL credentials
- Update BENCHMARK_SUMMARY.md with hybrid search performance results:
  - Phonetic (SOUNDEX): 17-32ms
  - Fuzzy (JSON_TEXTCONTAINS): 11-20ms
  - Hybrid Combined: 17-18ms
  - Test suite: 6 passed, 1 failed (vector requires ONNX model)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>